src/objects/Credit_Card_Type_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores Credit Card Type values across all systems (Web, Salesforce, AS400, PaymentGateway)</description>
    <fields>
        <fullName>AS400_Value__c</fullName>
        <label>AS400 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Value__c</fullName>
        <label>Gateway Value</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Value__c</fullName>
        <label>Web Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Credit Card Type Mapping</label>
</CustomObject>